<resources>
    <string name="app_name">Seleccion TFG</string>
    <string name="DataBaseName">Fachumdb</string>


    <!-- String Generales -->
    <string name="inicio">Inicio</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>


    <string name="hello_blank_fragment">holaaaaaaaaaaa</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_login">UjaFachum Tfg</string>

    <!-- Strings related to login -->


    <string name="tituloprincipal"> Bienvenidos a la app de la facultad de humanidades para la seleccion de TFG </string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">UjaFachum</string>


    <!-- String related to Activity 2 -->


    <string name="elegir_tutor"> Elige este Tutor </string>
    <string name="borra_tutor"> Quite este Tutor </string>
    <string name="tematicas"> Temáticas o Tfg´s disponibles   </string>
    <string name="title_activity_main2">Main2Activity</string>



    <!-- String related to Main Activity 2  -->

    <string name="titulomain2"> Bienvenidos  </string>
    <string name="subtitulo2"> Uso y finalidad de la aplicacion  </string>
    <string name="explicacion"> La facultad de humanidades y ciencias de la educacion ha creado esta app para la seleccion de TFG para que los alumnos puedan elegir las distintas

    opciones de tutores que tienen, en la pantalla que sale al principio un alumno elige un tutor y al lado sale la prioridad , podra tambien eliminarlo y hacerlo esto de manera informatizada sin tener que acudir a secretaria y hacerlo a papel
    </string>


</resources>
