<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Indigo"
    tools:context="com.example.manuel.ujafachumtfg.Main2Activity">


    // Incluimos la cabecera
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >



        <TextView android:id="@+id/txtAbTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="110dp"
            android:text="@string/titulomain2"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    </android.support.v7.widget.Toolbar>




    <TextView
        android:id="@+id/TituloPrincipal"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:text="@string/subtitulo2"
        android:paddingLeft="50dp"
        android:layout_gravity="center_horizontal|top" />


    <ImageView
        android:layout_marginTop="80dp"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/icono_facultad"
        />



    <TextView
        android:id="@+id/Explicacion"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="363dp"
        android:layout_height="180dp"
        android:textSize="15sp"
        android:layout_marginTop="350dp"
        android:text="@string/explicacion"
        android:paddingLeft="10dp"
        android:layout_gravity="center_horizontal|top" />







</FrameLayout>
