<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/Indigo"
    tools:context="com.example.manuel.ujafachumtfg.Activity2"
    android:weightSum="1">



    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >



        <TextView android:id="@+id/txtAbTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tematicas"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    </android.support.v7.widget.Toolbar>



    <TextView
        android:id="@+id/tutor"

        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="texto"
        android:textSize="18sp"
        android:layout_above="@+id/button_eligetutor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/codigotutor"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="texto"
        android:layout_above="@+id/tutor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/NombreTutor"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="texto"
        android:textSize="18sp"
        android:layout_below="@+id/codigotutor"
        android:layout_alignLeft="@+id/button_borratutor"
        android:layout_alignStart="@+id/button_borratutor" />





    <Button

        android:id="@+id/button_eligetutor"
        android:layout_width="107dp"
        android:layout_height="67dp"
        android:text="@string/elegir_tutor"
        android:layout_gravity="left|center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/codigotutor"
        android:layout_alignStart="@+id/codigotutor" />

    <Button

        android:id="@+id/button_borratutor"
        android:layout_width="107dp"
        android:layout_height="67dp"
        android:text="@string/borra_tutor"
        android:layout_gravity="center"

        android:layout_alignTop="@+id/button_eligetutor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp" />




    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:layout_below="@+id/appbar3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/codigotutor" />



</RelativeLayout>
